# rag-platform

./: .env.example
rag-platform/: .dockerignore  .env.example  .gitignore  README.md  profile_latency.py  pyproject.toml  run_full_ingest.py
rag-platform/.github/workflows/: tests.yml
rag-platform/apps/api/: Dockerfile  auth.py  config.py  logging_config.py  main.py  metrics.py  rate_limit.py  schemas.py  tracing.py
rag-platform/apps/frontend/: Dockerfile  app.py
rag-platform/apps/ingestion/: chunker.py  embedder.py  indexer.py  pipeline.py  setup_collection.py
rag-platform/apps/ingestion/fetchers/: nvd_fetcher.py
rag-platform/apps/ingestion/parsers/: base.py  cve_parser.py  mitre_parser.py
rag-platform/infra/docker/: docker-compose.yml
rag-platform/tests/: smoke_test.py
rag-platform/tests/evaluation/: eval_dataset.py  run_eval.py
rag-platform/tests/integration/: test_api.py
rag-platform/tests/unit/: test_auth.py  test_chunker.py  test_config.py  test_embedder.py  test_indexer.py  test_observability.py  test_parsers.py  test_rate_limit.py
