[tool.poetry]
name = "rag-platform"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
qdrant-client = "^1.7.0"
sentence-transformers = "^2.6.1"
langchain-text-splitters = "^0.3.0"
python-dotenv = "^1.0.0"
openai = "^1.10.0"
httpx = "^0.25.0"
ragas = "^0.2.10"
datasets = "^3.4.0"
langchain-openai = "^0.3.0"
streamlit = "^1.35.0"

# Observability
structlog = "^24.1.0"
prometheus-client = "^0.20.0"
opentelemetry-api = "*"
opentelemetry-sdk = "*"
opentelemetry-instrumentation-fastapi = "*"
opentelemetry-instrumentation-httpx = "*"
opentelemetry-exporter-otlp = "*"
opentelemetry-exporter-prometheus = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"